--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "license": "MIT",
     "require": {
         "php": ">=5.3.0",
-        "adamwathan/form": "dev-master"
+        "adamwathan/form": "0.2"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
